test/tests/stages/13_floating-point_numbers/invalid_types/extra_credit/compound_mod_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(i)
  =
  const int(5)
  ;
  identifier(i)
  %=
  const double(1.0)
  ;
  return
  identifier(i)
  ;
  }
